Firefox fix scrollbars

--- a/sass/calculator/calculator.sass
+++ b/sass/calculator/calculator.sass
@@ -6,7 +6,7 @@ body
 
 /* Rekenmachien original styling
 .rekenmachien
-  width: 325px
+  width: 322px
 
 .rekenmachien, .rekenmachien *
   box-sizing: border-box
